Finished in app demo

--- a/demos/continuous-slider.html
+++ b/demos/continuous-slider.html
@@ -89,7 +89,7 @@
                                 Standard Slider
                             </a>
                         </li>
-                        <li class="c-main-nav--list-item">
+                        <li class="c-main-nav--list-item is-selected">
                             <a href="continuous-slider.html" class="c-main-nav--link">
                                 Continuous Slider
                             </a>
