--- a/demos/in-app-init-slider.html
+++ b/demos/in-app-init-slider.html
@@ -94,7 +94,7 @@
                                 Continuous Slider
                             </a>
                         </li>
-                        <li class="c-main-nav--list-item">
+                        <li class="c-main-nav--list-item is-selected">
                             <a href="in-app-init-slider.html" class="c-main-nav--link">
                                 In App Init
                             </a>
@@ -138,51 +138,10 @@
             </div>
         </div>
     </div>
-</section>
-
-<section class="c-sliding-panels">
-    <div class="c-sliding-panels__content" data-controls="looping">
-        <div class="c-sliding-panels__nav">
-            <button class="c-sliding-panels__button c-sliding-panels__button--circle c-sliding-panels__button--next js-slide-to-panel js-slide-to-previous" data-slide-to-panel="previous">Previous</button>
-            <button class="c-sliding-panels__button js-slide-to-panel" data-slide-to-panel="looping-one">Panel 1</button>
-            <button class="c-sliding-panels__button js-slide-to-panel" data-slide-to-panel="looping-two">Panel 2</button>
-            <button class="c-sliding-panels__button js-slide-to-panel" data-slide-to-panel="looping-three">Panel 3</button>
-            <button class="c-sliding-panels__button c-sliding-panels__button--circle c-sliding-panels__button--previous js-slide-to-panel js-slide-to-next" data-slide-to-panel="next">Next</button>
-        </div>
-    </div>
 
     <div class="l-content-width">
-        <h1>Looping Panels</h1>
-    </div>
-
-    <div class="c-sliding-panels__panels-holder u-reset-section-div js-sliding-panels-looping" data-nav="looping">
-        <div class="c-sliding-panels__panels-tray js-sliding-panels-tray">
-            <div class="c-sliding-panels__panel js-sliding-panel" data-panel="looping-one">
-                <div class="c-sliding-panels__content">
-                    <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Nulla quis lorem ut libero malesuada feugiat. Donec rutrum congue leo eget malesuada. Nulla quis lorem ut libero malesuada feugiat. Sed porttitor lectus nibh.</p>
-                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui posuere blandit. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Nulla quis lorem ut libero malesuada feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
-                    <p>Cras ultricies ligula sed magna dictum porta. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Donec sollicitudin molestie malesuada. Proin eget tortor risus.</p>
-                </div>
-            </div>
-            <div class="c-sliding-panels__panel js-sliding-panel" data-panel="looping-two">
-                <div class="c-sliding-panels__content">
-                    <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Cras ultricies ligula sed magna dictum porta.</p>
-                    <p>Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Nulla quis lorem ut libero malesuada feugiat.</p>
-                </div>
-            </div>
-            <div class="c-sliding-panels__panel js-sliding-panel" data-panel="looping-three">
-                <div class="c-sliding-panels__content">
-                    <p>Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Pellentesque in ipsum id orci porta dapibus. Cras ultricies ligula sed magna dictum porta. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.</p>
-                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquet quam id dui posuere blandit. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Nulla quis lorem ut libero malesuada feugiat.</p>
-                    <p>Donec rutrum congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="l-content-width">
-        <button class="c-btn--2 js-in-app-next-button">Next</button>
+        <button class="c-btn c-btn--2 u-float-right js-in-app-next-button">Next</button>
+        <button class="c-btn c-btn--1 u-float-left u-visibility-hidden js-in-app-back-button">Back</button>
     </div>
 </section>
 
