--- a/demos/standard-slider.html
+++ b/demos/standard-slider.html
@@ -84,7 +84,7 @@
             <div class="l-col-m-66 c-main-nav js-main-menu">
                 <nav class="c-main-nav">
                     <ul class="c-main-nav--list">
-                        <li class="c-main-nav--list-item">
+                        <li class="c-main-nav--list-item is-selected">
                             <a href="standard-slider.html" class="c-main-nav--link">
                                 Standard Slider
                             </a>
